tests/fixtures/invalid/float_list.py
# Cannot call float() with List[int]
x = float([1, 2, 3])
